--- a/task/task-express/views/index.ejs
+++ b/task/task-express/views/index.ejs
@@ -98,7 +98,7 @@
     <div class="login">
         <div class="leftpart"></div>
         <div class="loginform">
-            <form class="myform" action="/getList" method="post">
+            <form class="myform" action="/list" method="post">
                 <input type="text" autocomplete="off" placeholder="帐号" class="el-input__inner"  id="username" name="username"/>
                 
                 <input type="password" autocomplete="off" placeholder="密码" class="el-input__inner"  id="pwd" name="pwd"/>
