--- a/task/task-express/views/list.ejs
+++ b/task/task-express/views/list.ejs
@@ -112,16 +112,14 @@
                         </thead>
 
                         <tbody id="result"></tbody>
-                        <%for(var i=0; i < list.length; i++){%>
+                        <%  for(var i = 0;i<list.length;i++){ %>
                             <tr>
-                                <td>109</td>
-                                <td><%= list[i]["title"]%></td>
-                                <td><%= list[i]["views"]%></td>
-                                <td>213</td>
+                                <td>110</td>
+                                <td><%= list[i].title %></td>
+                                <td><%= list[i].views %></td>
+                                <td>214</td>
                             </tr>
-                        <%}%>
-
-
+                        <% } %>
                         <tr>
                             <td>
                                 109
